# sport_analytics

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  config_loader.py  config_sample.yml  pyproject.toml
1_elt/0_extract/strava/: __init__.py  extract_strava_data.py  strava_client.py
1_elt/0_extract/whoop/: auth_whoop.py  extract_whoop_data.py  whoop.py
1_elt/1_load/strava/: load_strava_data.py
1_elt/1_load/whoop/: load_whoop_data.py
1_elt/2_transform/: .user.yml  HOW_TO_RUN.md  README.md  dbt_project.yml  profiles.yml
1_elt/2_transform/macros/: attach_databases.sql  generate_schema_name.sql
1_elt/2_transform/macros/tests/: end_date_alert.sql  end_date_warning.sql  greater_than_or_equal_to.sql  less_than_or_equal_to.sql
1_elt/2_transform/models/metrics/dates/: dim_dates.sql  dim_dates.yml
1_elt/2_transform/models/metrics/semantic/: data_check.sql  fct_activities.sql  fct_activities.yml
1_elt/2_transform/models/metrics/strava/: dim_strava.yml  dim_strava_activity_type.sql  dim_strava_gear.sql  fct_strava.yml  fct_strava_activities.sql  fct_strava_activities_socials.sql
1_elt/2_transform/models/metrics/whoop/: dim_whoop.yml  dim_whoop_workouts.sql  fct_whoop.yml  fct_whoop_physiological_cycles.sql  fct_whoop_sleep_quality.sql  fct_whoop_sleeps.sql  fct_whoop_workouts.sql
1_elt/2_transform/seeds/: activity_mapping.csv  mooncalender.csv
2_analytics/Chat-to-Data/: __init__.py  api.py  how_to_run_chat.txt  index.html
2_analytics/sleep_analytics/: api.py  how_to_run.txt  index.html
(+9 files in other folders)
