[project]
name = "mein-dbt-projekt"
version = "0.1.0"
description = "dbt project with DuckDB"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.5.1",
    "sqlfluff>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["1_elt"]
