[project]
name = "mein-dbt-projekt"
version = "0.1.0"
description = "dbt project with DuckDB"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.7.0",
    "authlib>=1.2.0",
    "requests>=2.31.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "dbt-duckdb>=1.10.0",
    "pre-commit>=4.5.1",
    "sqlfluff>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["1_elt"]
